Sonar Cleanups in FrankDoc Model package (#435)